// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/IconicButton set to disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <button
      aria-label="Cancel"
      class="IconicButton__WrapperButton-cimfyu-1 hDMVDi IconicButton-cimfyu-2 dBFLvz"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="Icon-sc-150w9kl-0 cGgqBK nds-icon--cancel"
        fill="currentColor"
        focusable="false"
        height="32px"
        p="half"
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
        />
      </svg>
      <p
        class="Text-sc-15glbbx-0 cEhJdR"
        color="currentColor"
        font-size="medium"
      >
        Cancel
      </p>
    </button>
    <button
      aria-label="Lock"
      class="IconicButton__WrapperButton-cimfyu-1 hDMVDi IconicButton-cimfyu-2 dBFLvz"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="Icon-sc-150w9kl-0 cGgqBK nds-icon--lock"
        fill="currentColor"
        focusable="false"
        height="32px"
        p="half"
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
        />
      </svg>
      <p
        class="Text-sc-15glbbx-0 cEhJdR"
        color="currentColor"
        font-size="medium"
      >
        Lock
      </p>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/IconicButton with a hidden label 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <button
      aria-label="Hidden Label"
      class="IconicButton__WrapperButton-cimfyu-1 fVOmRL IconicButton-cimfyu-2 dBFLvz"
    >
      <svg
        aria-hidden="true"
        class="Icon-sc-150w9kl-0 cGgqBK nds-icon--user"
        fill="currentColor"
        focusable="false"
        height="32px"
        p="half"
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
      <div
        class="IconicButton__HoverText-cimfyu-0 bduMEZ"
        style="position:absolute;top:0;left:0;opacity:0;pointer-events:none"
      >
        Hidden Label
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/IconicButton with a long label 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <button
      aria-label="I am an Iconic Button with a really really really long label"
      class="IconicButton__WrapperButton-cimfyu-1 iHxHpW IconicButton-cimfyu-2 dBFLvz"
    >
      <svg
        aria-hidden="true"
        class="Icon-sc-150w9kl-0 cGgqBK nds-icon--user"
        fill="currentColor"
        focusable="false"
        height="32px"
        p="half"
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
      <p
        class="Text-sc-15glbbx-0 cEhJdR"
        color="currentColor"
        font-size="medium"
      >
        I am an Iconic Button with a really really really long label
      </p>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/IconicButton with label 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <button
      aria-label="Delete"
      class="IconicButton__WrapperButton-cimfyu-1 iHxHpW IconicButton-cimfyu-2 dBFLvz"
    >
      <svg
        aria-hidden="true"
        class="Icon-sc-150w9kl-0 cGgqBK nds-icon--delete"
        fill="currentColor"
        focusable="false"
        height="32px"
        p="half"
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
        />
      </svg>
      <p
        class="Text-sc-15glbbx-0 cEhJdR"
        color="currentColor"
        font-size="medium"
      >
        Delete
      </p>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/IconicButton without a label 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <button
      class="IconicButton__WrapperButton-cimfyu-1 iHxHpW IconicButton-cimfyu-2 dBFLvz"
    >
      <svg
        aria-hidden="true"
        class="Icon-sc-150w9kl-0 cGgqBK nds-icon--delete"
        fill="currentColor"
        focusable="false"
        height="32px"
        p="half"
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
        />
      </svg>
    </button>
  </div>
</div>
`;
